# patrolling

./: .gitignore  README.md  note.txt  pyproject.toml
exp_data/maze/: generated_maze.txt  generated_maze_1.txt  generated_maze_2.txt  generated_maze_3.txt  generated_maze_4.txt  generated_maze_5.txt  generated_maze_6.txt  generated_maze_7.txt
exp_data/move_history/: agent_move_history_1.txt  agent_move_history_2.txt  agent_move_history_3.txt  move_history.txt  move_history_1.txt  move_history_2.txt  move_history_3.txt  move_history_4.txt  move_history_5.txt  move_history_6.txt  move_history_7.txt
exp_data/reasons/: operation_reason_log.txt  operation_reason_log_1.txt  operation_reason_log_2.txt  operation_reason_log_3.txt  operation_reason_log_4.txt  operation_reason_log_5.txt  operation_reason_log_6.txt  operation_reason_log_7.txt
src/: __init__.py  agent.py  game.py  pyans.py
src/exp/: maze_experiment.py  maze_game.py  maze_replay.py
src/patrolling/: answer.py  game.py  hist_maze_road.py  hist_think_time.py  replay.py
