[project]
name = "patrolling"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "pygame>=2.6.1",
    "matplotlib>=3.9.3",
    "numpy>=2.1.3",
    "tqdm>=4.67.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/patrolling"]
